fixed overlapping/conflict in styles

--- a/src/components/Navbar2.css
+++ b/src/components/Navbar2.css
@@ -8,7 +8,7 @@
     height: 63px;
     width: 100%;
     max-width: 100%;
-    position: relative;
+    position: absolute;
     z-index: 100;
   }
   
